--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="classBlock.js"></script>
-  <script language="javascript" type="text/javascript" src="makeInteractive_online.js"></script>
+  <script language="javascript" type="text/javascript" src="self.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <style>
